--- a/gb/nf1351518.md
+++ b/gb/nf1351518.md
@@ -13,16 +13,15 @@
 <a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/13/n12751158.md#1" title="日本福岛附近7.1级强震 东京有强烈震感""><img width="73" src="https://i.epochtimes.com/assets/uploads/2021/02/000_92X2VD-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/10/n12744350.md#1" title="中共海外舆论操纵手法大曝光 西方如何应对""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/09/ffbb298fdaf8bf5a9bf6d14c7c2cbd2f-320x200.jpg">&nbsp;</a>
 <p align="center"><a href="https://github.com/yrsmsb310/djy/blob/master/gb/nf4514.md#1">更多头条......</a><hr><h2><p><strong>即时快讯&nbsp;&#160;&nbsp;&#160; :bar_chart: <a target="_blank" href="https://yrsmsb310.github.io/vd/yq.html">全球疫情地图</a></strong></p></h2>
-:clock8: <em>3分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/13/n12750365.md#1">揭秘中共如何利用留学生和美国学者窃技术</a><br>
-:clock8: <em>11分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/11/n12746323.md#1">美众议员：取消文化类似中共社会信用系统</a><br>
-:clock8: <em>12分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/14/n12752323.md#1">大年初二 宜昌网红吊桥侧翻 多人坠落茶园</a><br>
-:clock8: <em>21分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/14/n12752240.md#1">大年初一到北京拜年 四川访民被关黑监狱</a><br>
-:clock8: <em>40分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/14/n12752081.md#1">【疫情2.14】美国议员提法案 追责世卫</a><br>
+:clock8: <em>24分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/13/n12750365.md#1">揭秘中共如何利用留学生和美国学者窃技术</a><br>
+:clock8: <em>32分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/11/n12746323.md#1">美众议员：取消文化类似中共社会信用系统</a><br>
+:clock8: <em>33分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/14/n12752323.md#1">大年初二 宜昌网红吊桥侧翻 多人坠落茶园</a><br>
+:clock8: <em>42分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/14/n12752240.md#1">大年初一到北京拜年 四川访民被关黑监狱</a><br>
+:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/14/n12752081.md#1">【疫情2.14】美国议员提法案 追责世卫</a><br>
 :clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/14/n12752067.md#1">天网义工募款送暖 助黄琦与母亲度过危难关头</a><br>
 <hr><h2><p><strong>新闻排行</strong></p></h2>
 <a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/12/n12749602.md#1">中共常委赵乐际保不了弟弟 中南海酿巨变</a><br>
 <a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/13/n12750374.md#1">山东一家六口除夕被灭门 细节曝光</a><br>
-<a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/12/n12748527.md#1">央视春晚魔术多次穿帮 网民吐槽被删</a><br>
 <a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/13/n12751008.md#1">公共情妇李薇握有中共高官不可告人秘密</a><br>
 <a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/13/n12750188.md#1">【翻墙必看】环坐习近平四周的年轻男子是谁？</a><br>
 <a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/12/n12749444.md#1">中宣部前官员去世 习近平母亲与鲍彤送花圈</a><br>
@@ -30,14 +29,15 @@
 <a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/12/n12748871.md#1">赵乐际弟赵乐秦卸任 旧部美女书记接连被批</a><br>
 <a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/13/n12750442.md#1">【拍案惊奇】传缅军断网借刀华为 人民币斗美元？</a><br>
 <a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/12/n12749440.md#1">季风:“醒来的人把春晚当笑话看”</a><br>
+<a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/13/n12750299.md#1">谭德塞改口：不排除病毒起源所有假设</a><br>
 <br><p align="center"><a href="https://github.com/yrsmsb310/djy/blob/master/gb/nscrw413.md#1">更多......</a></p><hr><h2><p><strong>纪元推荐</strong></p></h2>
+<a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/13/n12751417.md#1">钟原：中共宣传“清零”却无法掩盖真实疫情</a><br>
+<a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/13/n12751374.md#1">窃选者的炫耀：《影子竞选秘史》发表之因由（1）</a><br>
+<a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/13/n12751280.md#1">程晓农：拜登上任首月的美中关系</a><br>
 <a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/12/n12749325.md#1">【名家专栏】美国真正敌人是渗透内部的中共</a><br>
 <a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/12/n12749309.md#1">【名家专栏】拜登取消Keystone油管给谁献大礼？</a><br>
 <a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/11/n12747774.md#1">【时事纵横】拜登白宫不同调 战狼扩编升级</a><br>
 <a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/11/n12747390.md#1">专访林晓旭：世卫专家调查存在六大问题</a><br>
-<a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/10/n12745489.md#1">王赫：围剿中共仍是2021国际格局演变主线</a><br>
-<a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/11/n12746100.md#1">【远见快评】美中竞争是表演？拜登送三重大礼</a><br>
-<a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/10/n12745341.md#1">杨威：放纵孔子学院 拜登团队有亲共者？</a><br>
 <br><p align="center"><a href="https://github.com/yrsmsb310/djy/blob/master/gb/news392.md#1">更多......</a></p></td><td VALIGN=TOP width="371">
 <a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/12/n12750047.md#1">中国各军区兵种大法弟子给李洪志大师拜年</a><br>
 <a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/13/n12751108.md#1">春晚含五大洲歌舞 政协前官员揭中共企图</a><br>
@@ -75,6 +75,7 @@
 <a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/11/n12746863.md#1">大陆公检法司法轮功学员向李洪志师父拜年</a><br>
 <a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/11/n12747266.md#1">美国务卿布林肯发表声明 祝贺中国新年</a><br>
 <a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/11/n12747190.md#1">【新闻大家谈】拜习通话谁让步？世卫突改口</a><br>
+<a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/11/n12746100.md#1">【远见快评】美中竞争是表演？拜登送三重大礼</a><br>
 <a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/11/n12746106.md#1">拜登和习近平首次通话 谈了什么</a><br>
 <a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/10/n12745615.md#1">赵丽颖新剧杀青照曝光 瘦的令人震惊</a><br>
 <a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/9/n12743472.md#1">【时事军事】中共军演引动荡 美军加强印太部署</a><br>
@@ -98,16 +99,15 @@
 <a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/9/n12743829.md#1">蓬佩奥促拜登警惕中共：无需介意习近平感受</a><br>
 <a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/9/n12743788.md#1">章子怡晒庆生视频 继女小苹果偕醒醒弹钢琴</a><br>
 <a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/9/n12743927.md#1">【时事纵横】弹劾拉锯 任正非求拜登？抗共潮起</a><br>
-<a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/9/n12743554.md#1">【役情最前线】澳智库：习铁了心 任内逼统台湾</a><br>
 <br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nsc413.md#1">更多要闻......</a></p></td><td VALIGN=TOP rowspan=7 width="156" align="middle"><a href="https://gitlab.com/szzdlab/vdSY-Classical-Chinese-Dance-Technique-Collection-2018/raw/master/SY-Classical-Chinese-Dance-Technique-Collection-2018.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"><br>神韵古典舞表演</a><br><a href="https://gitlab.com/szzdlab/vd9p/raw/master/9p.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/9ping.jpg" title="九评共产党" alt="九评共产党"><br>九评共产党</a><br><a href="https://gitlab.com/szzdlab/vdzjmd1_19/raw/master/zjmd1_19.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"><br>共产主义终极目的</a><br><a href="https://gitlab.com/szzdlab/vdzf-dsp-1128/raw/master/zf-dsp-1128.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/weihuo.jpg" title="中共的伪火骗局"" alt="中共的伪火骗局""><br>中共的伪火骗局"</a><br><a href="https://gitlab.com/szzdlab/vdst5-29/raw/master/st5-29.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石"><br>古今奇观-藏字石</a><br><a href="https://gitlab.com/szzdlab/vd3-JTT_CN_MH-360p/raw/master/3-JTT_CN_MH-360p.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"><br>通往天安门的旅程</a><br><a href="https://gitlab.com/szzdlab/vdwl/raw/master/wl.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/weilai.jpg" title="未来人的神话" alt="未来人的神话"><br>未来人的神话故事</a><br><a href="https://gitlab.com/szzdlab/vdhongchaoyinmou-hi/raw/master/hongchaoyinmou-hi.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"><br>中共罪恶的活摘</a><br><a href="https://gitlab.com/szzdlab/vdtzrs/raw/master/tzrs.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/huozhai.jpg" title="铁证如山" alt="铁证如山"><br>铁证如山</a><br><a href="https://gitlab.com/szzdlab/vder3n_3VVJ/raw/master/er3n_3VVJ.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"><br>一家四口死于暴政</a><br><a href="https://gitlab.com/szzdlab/vdXmL0_0XDL2p/raw/master/XmL0_0XDL2p.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"><br>弟妹相继死于迫害</a><br><a href="https://gitlab.com/szzdlab/vdNG8l/raw/master/NG8l.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"><br>她们被中共迫害死</a><br><a href="https://gitlab.com/szzdlab/vdwt6Y_vPhM/raw/master/wt6Y_vPhM.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"><br>双城血泪</a><br><a href="https://gitlab.com/szzdlab/vd5Vu3_XS2V/raw/master/5Vu3_XS2V.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"><br>无罪辩护震撼人心</a><br><a href="https://gitlab.com/szzdlab/vdvG2w_fwq/raw/master/vG2w_fwq.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/6c10-720.jpg" title="从610到720" alt="从610到720"><br>从610到720</a><br><a href="https://gitlab.com/szzdlab/vdO2jN_uD/raw/master/O2jN_uD.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"><br>中共官员的选择</a><br><a href="https://gitlab.com/szzdlab/vd1400forge-1210/raw/master/1400forge-1210.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/1400l.jpg" title="剖析1400例" alt="剖析1400例"><br>剖析1400例</a><br><a href="https://gitlab.com/szzdlab/vdC1WZ_mj/raw/master/C1WZ_mj.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/425.jpg" title="万人上访真相" alt="万人上访真相"><br>万人上访真相</a><br><a href="https://gitlab.com/szzdlab/vdqh/raw/master/qh.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"><br>被迫害的清华学子</a><br><a href="https://gitlab.com/szzdlab/vdJZ5e_5Vusp/raw/master/JZ5e_5Vusp.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/jian-z513.jpg" title="见证513" alt="见证513"><br>见证513</a><br><a href="https://gitlab.com/szzdlab/vd0iY/raw/master/0iY.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"><br>功夫 寻道</a><br><a href="https://gitlab.com/szzdlab/vdguanguimin/raw/master/guanguimin.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"><br>歌唱家的人生奇迹</a><br><a href="https://gitlab.com/szzdlab/vdmjjy/raw/master/mjjy.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"><br>名校精英的选择</a><br><a href="https://gitlab.com/szzdlab/vdc4rB_QQbr/raw/master/c4rB_QQbr.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"><br>音乐之家的故事</a><br><a href="https://gitlab.com/szzdlab/vdO23c_E/raw/master/O23c_E.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"><br>平凡中的不平凡</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/130/nizhibeituolanlao.jpg" title="善良女士被投男牢"  alt="善良女士被投男牢"><br>善良女士被投男牢</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/130/huozhai1.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"><br>警卫目击中共活摘</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/130/motoumks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"><br>马克思的成魔之路</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/130/konggaojm.jpg" title="303万人的举报"  alt="303万人的举报"><br>303万人的举报</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/130/lianganduibi.jpg" title="海峡两岸强烈反差"  alt="海峡两岸强烈反差"><br>海峡两岸强烈反差</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"><br>印度媒体报道东方</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/130/xuejiao.jpg" title="不一样的海外校园"  alt="不一样的海外校园"><br>不一样的海外校园</a><br>
-<tr><td VALIGN=middle width="370"><div align="center"><h2><a href="http://1.171.82.179/UmhjM">我要退出中共的党团队</a></h2>昨日三退人数: 32,655</div><br></td><td VALIGN=middle width="371"><h3 align="center"><strong align="center">
+<tr><td VALIGN=middle width="370"><div align="center"><h2><a href="http://36.231.29.34/UmhjM">我要退出中共的党团队</a></h2>昨日三退人数: 32,655</div><br></td><td VALIGN=middle width="371"><h3 align="center"><strong align="center">
 
 ```diff
 !退出中共党、团、队总人数:
 
 !共 372,713,257 人
 ```
-</strong></h3></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>中国人权</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/14/n12752240.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2021/02/S__3383317-320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/14/n12752240.md#1">大年初一到北京拜年 四川访民被关黑监狱</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/14/n12752067.md#1">天网义工募款送暖 助黄琦与母亲度过危难关头</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/12/n12748078.md#1">前大陆学者打电话八分钟  救出一对夫妇</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/12/n12750040.md#1">中共滥用刷脸引反感 大陆民众被变“透明人”</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/12/n12749659.md#1">北京共有产权房乱象 豆腐渣工程堪忧</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/12/n12749464.md#1">澳洲参议员：感谢上帝 年轻人在对抗中共</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid278.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>中国经济</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/13/n12750651.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2020/10/GettyImages-1228208941-320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/13/n12750651.md#1">资金承压 大陆紫光集团欲出售股权融资</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/13/n12750550.md#1">海航集团破产最新发展 原股东权益将清零</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/13/n12750082.md#1">银行以指导价放贷 深圳二手房首付升至5成</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/12/n12749629.md#1">中共加强对巴基斯坦一带一路更多控制惹议</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/12/n12749475.md#1">维权不成反入中共“黑名单” 大陆劳工更艰辛</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/12/n12748765.md#1">传马云在海南岛高尔夫球场现身</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid283.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>大陆政治</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/8/n12739586.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2021/02/000_9242QW-320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/8/n12739586.md#1">美中印太角力 专家：美军需以实力坚守红线</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/14/n12751888.md#1">陆疫苗未成候选疫苗 陈时中：技术资料不完备</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/14/n12751690.md#1">被英国摘牌CGTN受挫 欧盟促北京撤BBC禁令</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/13/n12751264.md#1">白宫：对世卫在中国病毒调查报告深表关切</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/13/n12750277.md#1">中共缺席审判补加罚没财产 专家：非法程序</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/13/n12750299.md#1">谭德塞改口：不排除病毒起源所有假设</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid277.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>天灾人祸</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/14/n12752323.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2021/02/134-320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/14/n12752323.md#1">大年初二 宜昌网红吊桥侧翻 多人坠落茶园</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/14/n12751919.md#1">新年多省现阴霾天气 官方甩锅爆竹网民不信</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/14/n12751949.md#1">大年初二 湖南一游乐设施发生事故致16伤</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/14/n12751882.md#1">成都一小区火灾 因封路多人跳楼 3人重伤</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/13/n12751235.md#1">知情人：吉林长春传染病院因主任染疫被封院</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/12/n12749768.md#1">湄公河水位下降严重 国际组织吁中共公布资料</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid280.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>社会万象</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/13/n12751568.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2021/02/71dc5ee41972664fb5c86ab14df7204a-320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/13/n12751568.md#1">华为状告汇丰要取文件 被呛：无任何依据</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/12/n12748758.md#1">网络疯传中共武警持“狼牙棒”等凶器照片</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/11/n12748024.md#1">海外华裔学者恭祝法轮功团体和李大师过年好</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/11/n12747231.md#1">北京延庆豆腐渣房 官员验房遇“电梯惊魂”</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/10/n12745326.md#1">中国新生人口崩盘式下跌 厦门和信阳减半</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/10/n12745446.md#1">三退声明精选（2021/02/10）</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid282.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>科教文化</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/12/n12748439.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2020/05/bdb70bf4574a234f479752a3f3eded7c-320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/12/n12748439.md#1">拜登撤孔子学院规定风波 促议员批中共渗透</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/12/n12748366.md#1">“给人添堵” 央视春晚催婚小品引来炮轰</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/10/n12744300.md#1">广西多所学校乱收费 人脸识别服务费达上百万</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/7/n12739084.md#1">广州教授抄袭米菲一度辩解 今同意永久停用</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/6/n12737703.md#1">国安法进香港课堂 卢比奥促拜登制裁中共官员</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/4/n12732660.md#1">贾平凹之女“诗作”上热搜 网民指其为靠爸族</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid281.md#1">更多......</a></p></td></tr>
+</strong></h3></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>中国人权</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/14/n12752240.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2021/02/S__3383317-320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/14/n12752240.md#1">大年初一到北京拜年 四川访民被关黑监狱</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/14/n12752067.md#1">天网义工募款送暖 助黄琦与母亲度过危难关头</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/12/n12748078.md#1">前大陆学者打电话八分钟  救出一对夫妇</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/12/n12750040.md#1">中共滥用刷脸引反感 大陆民众被变“透明人”</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/12/n12749659.md#1">北京共有产权房乱象 豆腐渣工程堪忧</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/12/n12749464.md#1">澳洲参议员：感谢上帝 年轻人在对抗中共</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid278.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>中国经济</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/13/n12750651.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2020/10/GettyImages-1228208941-320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/13/n12750651.md#1">资金承压 大陆紫光集团欲出售股权融资</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/13/n12750550.md#1">海航集团破产最新发展 原股东权益将清零</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/13/n12750082.md#1">银行以指导价放贷 深圳二手房首付升至5成</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/12/n12749629.md#1">中共加强对巴基斯坦一带一路更多控制惹议</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/12/n12749475.md#1">维权不成反入中共“黑名单” 大陆劳工更艰辛</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/12/n12748765.md#1">传马云在海南岛高尔夫球场现身</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid283.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>大陆政治</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/8/n12739586.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2021/02/000_9242QW-320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/8/n12739586.md#1">美中印太角力 专家：美军需以实力坚守红线</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/14/n12751888.md#1">陆疫苗未成候选疫苗 陈时中：技术资料不完备</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/14/n12751690.md#1">被英国摘牌CGTN受挫 欧盟促北京撤BBC禁令</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/13/n12751264.md#1">白宫：对世卫在中国病毒调查报告深表关切</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/13/n12750277.md#1">中共缺席审判补加罚没财产 专家：非法程序</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/13/n12750248.md#1">专家：美国必须结束美企对中共的顺从</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid277.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>天灾人祸</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/14/n12752323.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2021/02/134-320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/14/n12752323.md#1">大年初二 宜昌网红吊桥侧翻 多人坠落茶园</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/14/n12751919.md#1">新年多省现阴霾天气 官方甩锅爆竹网民不信</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/14/n12751949.md#1">大年初二 湖南一游乐设施发生事故致16伤</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/14/n12751882.md#1">成都一小区火灾 因封路多人跳楼 3人重伤</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/13/n12751235.md#1">知情人：吉林长春传染病院因主任染疫被封院</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/12/n12749768.md#1">湄公河水位下降严重 国际组织吁中共公布资料</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid280.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>社会万象</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/13/n12751568.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2021/02/71dc5ee41972664fb5c86ab14df7204a-320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/13/n12751568.md#1">华为状告汇丰要取文件 被呛：无任何依据</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/12/n12748527.md#1">央视春晚魔术多次穿帮 网民吐槽被删</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/12/n12748758.md#1">网络疯传中共武警持“狼牙棒”等凶器照片</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/11/n12748024.md#1">海外华裔学者恭祝法轮功团体和李大师过年好</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/11/n12747231.md#1">北京延庆豆腐渣房 官员验房遇“电梯惊魂”</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/10/n12745326.md#1">中国新生人口崩盘式下跌 厦门和信阳减半</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid282.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>科教文化</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/12/n12748439.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2020/05/bdb70bf4574a234f479752a3f3eded7c-320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/12/n12748439.md#1">拜登撤孔子学院规定风波 促议员批中共渗透</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/12/n12748366.md#1">“给人添堵” 央视春晚催婚小品引来炮轰</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/10/n12744300.md#1">广西多所学校乱收费 人脸识别服务费达上百万</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/7/n12739084.md#1">广州教授抄袭米菲一度辩解 今同意永久停用</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/6/n12737703.md#1">国安法进香港课堂 卢比奥促拜登制裁中共官员</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/4/n12732660.md#1">贾平凹之女“诗作”上热搜 网民指其为靠爸族</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid281.md#1">更多......</a></p></td></tr>
 <tr><td VALIGN=TOP width="370"><h2><p><strong>独家视角</strong></p></h2><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/5/n12736224.md#1">【独家】国防密件揭秘中共“六代战机”</a><br>
 <a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/1/20/n12700072.md#1">【独家】中国东盟峰会 中共防嘉宾不利言论</a><br>
 <a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/1/21/n12703413.md#1">【独家】外事文件曝中共高层误判国际局势</a><br>
