--- a/gb/nf4514.md
+++ b/gb/nf4514.md
@@ -4,6 +4,7 @@
 <tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/14/n12752730.md#1" target="_blank">病毒未被实验室蓄意使用？ 世卫说辞引质疑</a><br></h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/14/n12752730.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/02/GettyImages-1231058175-150x120.jpg" align ="left"></a>世卫组织专家组组长恩巴瑞克抛出病毒“非常不可能”由实验室泄漏受广泛质疑后，他日前又宣称的“新冠病毒没有被实验室蓄意使用”的说法，也遭质疑。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年02月15日 5:19 AM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/14/n12752810.md#1" target="_blank">格雷厄姆和川普通话 谈共和党下一步行动</a><br></h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/14/n12752810.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/02/GettyImages-1231125955-150x120.jpg" align ="left"></a>美国联邦共和党参议员林赛·格雷厄姆（Lindsey Graham）周日（2月14日）表示，弹劾案过后，前总统川普（特朗普）下一步将开始重建共和党，以便在2022年中期选举中为共和党重新夺回众议院和参议院。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年02月15日 4:42 AM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/14/n12752658.md#1" target="_blank">英国正式立法 抵制中共活摘器官</a><br></h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/14/n12752658.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2019/11/11-2-150x120.jpg" align ="left"></a>2月11日，英国的《药品和医疗器械法案》修正案正式成为法律，这是英国政府首次出台立法，明确抵制中共活摘器官的恶行。法案目的是制止中共强摘良心犯器官的罪恶，确保从海外进口的（可能被强制摘取的）人体组织、器官和细胞等不能进入英国医疗界。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年02月15日 1:25 AM							</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/14/n12752571.md#1" target="_blank">历史性冬季风暴来袭 德州发紧急灾难声明</a><br></h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/14/n12752571.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/02/GettyImages-1213516943-150x120.jpg" align ="left"></a>德克萨斯州正面临历史性冬季风暴的袭击。德州州长格雷格?阿伯特（Greg Abbott）周六（2月13日）发布紧急灾难声明（emergency disaster declaration），并敦促民众尽量不要出门，节约用电。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年02月14日 11:41 PM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/13/n12750365.md#1" target="_blank">揭秘中共如何利用留学生和美国学者窃技术</a><br></h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/13/n12750365.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/11/11-87-150x120.jpg" align ="left"></a>美国联邦调查局上个月逮捕了麻省理工学院著名纳米技术专家陈刚，指控他在申请联邦研究经费时，隐瞒为谋取利益而与中共科技机构之间的密切关系。陈刚是在中国出生的美籍华人。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年02月14日 8:39 PM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/11/n12746323.md#1" target="_blank">美众议员：取消文化类似中共社会信用系统</a><br></h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/11/n12746323.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2018/10/GettyImages-108337482-150x120.jpg" align ="left"></a>美国国会众议员马克·格林（Mark Green）在福克斯新闻网站撰文提醒美国人警惕激进左派的“取消文化”和言论审查趋势，并强调这种审查做法类似于中共利用社会信用系统控制民众的剧本。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年02月14日 8:31 PM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/14/n12752081.md#1" target="_blank">【疫情2.14】美英指责中共未充分提供数据</a><br></h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/14/n12752081.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/02/GettyImages-1300357867-150x120.jpg" align ="left"></a>据约翰?霍普金斯大学的统计数据，截至美东时间周日（2月14日）上午4点，全球的中共病毒（武汉肺炎、COVID-19）病例总数超过1.08亿（108,565,661）例，死亡人数超过239万（2,394,346）例。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年02月14日 8:03 PM							</td></tr>
@@ -33,6 +34,5 @@
 <tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/12/n12749325.md#1" target="_blank">【名家专栏】美国真正敌人是渗透内部的中共</a><br></h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/12/n12749325.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/02/GettyImages-1227754679-150x120.jpg" align ="left"></a>美国前国务卿蓬佩奥最近警告说，如果拜登政府的对华政策失误的话，我们的处境将会变得“很不一样”。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年02月13日 3:53 AM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/12/n12748710.md#1" target="_blank">【疫情2.12】纽约州承认隐瞒养老院死亡人数</a><br></h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/12/n12748710.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/02/GettyImages-1213726641-150x120.jpg" align ="left"></a>据约翰?霍普金斯大学的统计数据，截至美东时间周五（2月12日）凌晨2:23，全球的中共病毒（武汉肺炎、COVID-19）病例总数超过1.07亿（107,787,428）例，死亡人数近237万（2,368,807）例。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年02月13日 2:30 AM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/12/n12749602.md#1" target="_blank">中共常委赵乐际保不了弟弟 中南海酿巨变</a><br></h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/12/n12749602.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/02/GettyImages-466349472_gray-150x120.jpg" align ="left"></a>中国新年前夕，广西壮族自治区人大常委会副主任赵乐秦卸任桂林市委书记。亲习阵营媒体特别点出，赵乐秦两名前任已落马。赵乐秦是中共政治局常委、中纪委书记赵乐际之弟。外界关注，赵乐际深度卷入的陕西秦岭别墅案与青海非法采煤案仍在发酵；习近平步步紧逼，赵乐际处境高危。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年02月13日 2:12 AM							</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/12/n12749485.md#1" target="_blank">CGTN被英国摘牌后 又在德国被停播</a><br></h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/12/n12749485.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2019/03/yangshi-150x120.jpg" align ="left"></a>周五（2月12日），沃达丰德国（Vodafone Germany）公司表示，由于英国通讯管理局（Ofcom）上周吊销了中共官媒环球电视网（CGTN）在英国的广播执照，由于牌照问题，该公司也在德国停播了CGTN。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年02月13日 12:50 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/nf4514.md#1">上一页</a>&nbsp;&nbsp;1 &nbsp;&nbsp;<a href="https://github.com/yrsmsb310/djy/blob/master/gb/nf4514_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/yrsmsb310/djy/blob/master/gb/nf4514_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/yrsmsb310/djy/blob/master/gb/nf4514_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/yrsmsb310/djy/blob/master/gb/nf4514_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/yrsmsb310/djy/blob/master/gb/nf4514_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/yrsmsb310/djy/blob/master/gb/nf4514_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/yrsmsb310/djy/blob/master/gb/nf4514_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/yrsmsb310/djy/blob/master/gb/nf4514_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/yrsmsb310/djy/blob/master/gb/nf4514_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/yrsmsb310/djy/blob/master/gb/nf4514_2.md#1">下一页</a></h3></td></tr>
 </table><div align="center"><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/yrsmsb310/djy/blob/master/gb/nf4514.md#1<br><a href="https://github.com/yrsmsb310/djy/blob/master/gb/nf4514.md#1"><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/yrsmsb310/djy/blob/master/gb/nf4514.md%231" title="分享本文章"></a><br>原文地址： <a href="https://www.epochtimes.com/gb/nf4514.htm">https://www.epochtimes.com/gb/nf4514.htm</a>    （国内需<a href="https://github.com/yrsmsb310/www/blob/master/README.md#8">下载翻墙软件</a>才能访问）</div>
